test/Fail/CyclicModuleDependency.agda
module CyclicModuleDependency where

import CyclicModuleDependency

